quasi finito (forse...) + Json e implementati Adapter e Wrapper